Add packages for mca, umap, random numbers, and data cleaning

--- a/code/figure1.Rmd
+++ b/code/figure1.Rmd
@@ -672,11 +672,11 @@ rng <- RNGseq(max_n_pt * n_iter, 42)
 r <- rng[[3649]]
 
 rngtools::setRNG(r)
-gdc.umap <- uwot::umap(mca_res$ind$coord, 
-                       n_components = 3,
-                       n_neighbors = round(sqrt(nrow(mca_res$ind$coord))), # 87
-                       n_epochs = 1000,
-                       n_threads = 1)
+gdc.umap <- umap(mca_res$ind$coord, 
+                 n_components = 3,
+                 n_neighbors = round(sqrt(nrow(mca_res$ind$coord))), # 87
+                 n_epochs = 1000,
+                 n_threads = 1)
 gdc_umap_coors <- as.data.frame(gdc.umap) %>%
   rename(plot_x = V1, plot_y = V2, plot_z = V3)
 rownames(gdc_umap_coors) <- rownames(gdc_path_mca)
@@ -736,7 +736,7 @@ save(score_df, sample_df, optimal_minPts, file = "optimal_minpts_score.rda")
 ####################
 rngtools::setRNG(r)
 
-cluster_umap <- uwot::umap(mca_res$ind$coord,
+cluster_umap <- umap(mca_res$ind$coord,
   min_dist = 1e-6,
   n_components = 3,
   n_neighbors = round(sqrt(nrow(mca_res$ind$coord))),
